# thoth

./: .gitignore  CONTRIBUTING.md  DR ROADMAP.md  LICENSE  PUBLISHING_GUIDE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dev/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING_GUIDE.md  README.md  SECURITY.md  pyproject.toml  quick_launch.py  test_functionality.py  train_sample_model.py
dev/.github/: pull_request_template.md
dev/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dev/.github/assets/: .gitkeep  DEPLOYMENT_GUIDE.md  manifest.webmanifest  palette.md
dev/.github/workflows/: ci.yml
dev/configs/: config.yml
dev/docs/: conf.py  index.rst
dev/docs/_static/: brand.css
dev/models/english_cursive_lora/: config.json
dev/src/: __init__.py
dev/src/app/: __init__.py  main.py
dev/src/data/: __init__.py  download_data.py
dev/src/evaluate/: __init__.py
dev/src/model/: inference.py
dev/src/preprocess/: __init__.py  image_pipeline.py
docs/: conf.py  index.rst
models/english_cursive_lora/: preprocessor_config.json  tokenizer_config.json
src/app/: main.py
src/data/: dataset_manager.py
src/evaluate/: evaluate_model.py
src/model/: __init__.py  train_model.py
